--- a/TMDB/MovieDetailView/MovieDetailView.storyboard
+++ b/TMDB/MovieDetailView/MovieDetailView.storyboard
@@ -20,46 +20,52 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jVP-wv-DsO">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="i5X-jr-4Np">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="i5X-jr-4Np">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="497"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="i5X-jr-4Np" secondAttribute="height" multiplier="1:1.2" id="ZWM-RM-krd"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yLl-CR-Vdh">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yLl-CR-Vdh">
                                         <rect key="frame" x="20" y="517" width="374" height="29"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is movie tagline" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7JP-sZ-pAB">
-                                        <rect key="frame" x="20" y="556" width="374" height="18"/>
+                                        <rect key="frame" x="20" y="551" width="374" height="18"/>
                                         <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iws-GE-zJ5">
-                                        <rect key="frame" x="20" y="594" width="374" height="54"/>
+                                        <rect key="frame" x="20" y="589" width="374" height="54"/>
                                         <string key="text">This is movie description. This is movie description. This is movie description. This is movie description. This is movie description. </string>
                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Production Company" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kCl-eS-cvD">
-                                        <rect key="frame" x="20" y="673" width="374" height="18"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Production Company" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kCl-eS-cvD">
+                                        <rect key="frame" x="40" y="688" width="354" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bFI-Wu-6WU">
-                                        <rect key="frame" x="20" y="699" width="374" height="18"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bFI-Wu-6WU">
+                                        <rect key="frame" x="20" y="714" width="374" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Popularity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t6z-7G-fPD">
-                                        <rect key="frame" x="20" y="725" width="374" height="18"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Popularity" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t6z-7G-fPD">
+                                        <rect key="frame" x="20" y="740" width="374" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Production Companies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HMx-XO-WpO">
+                                        <rect key="frame" x="20" y="668" width="374" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -76,31 +82,34 @@
                                     <constraint firstItem="i5X-jr-4Np" firstAttribute="trailing" secondItem="plc-Xl-vJ0" secondAttribute="trailing" constant="414" id="GSg-vk-00T"/>
                                     <constraint firstItem="bFI-Wu-6WU" firstAttribute="top" secondItem="kCl-eS-cvD" secondAttribute="bottom" constant="8" symbolic="YES" id="H02-Ri-RI9"/>
                                     <constraint firstItem="i5X-jr-4Np" firstAttribute="leading" secondItem="plc-Xl-vJ0" secondAttribute="leading" id="KFr-ug-54s"/>
-                                    <constraint firstItem="7JP-sZ-pAB" firstAttribute="top" secondItem="yLl-CR-Vdh" secondAttribute="bottom" constant="10" id="MHD-KO-9w7"/>
+                                    <constraint firstItem="7JP-sZ-pAB" firstAttribute="top" secondItem="yLl-CR-Vdh" secondAttribute="bottom" constant="5" id="MHD-KO-9w7"/>
                                     <constraint firstItem="i5X-jr-4Np" firstAttribute="top" secondItem="jVP-wv-DsO" secondAttribute="top" id="NVb-MX-Kau"/>
+                                    <constraint firstItem="kCl-eS-cvD" firstAttribute="top" secondItem="HMx-XO-WpO" secondAttribute="bottom" constant="2" id="QG2-uf-1d3"/>
                                     <constraint firstAttribute="trailing" secondItem="i5X-jr-4Np" secondAttribute="trailing" id="UHj-qC-e0L"/>
                                     <constraint firstItem="sNk-ZN-8pf" firstAttribute="bottom" secondItem="i5X-jr-4Np" secondAttribute="bottom" constant="462" id="W9n-EK-wL6"/>
                                     <constraint firstItem="yLl-CR-Vdh" firstAttribute="top" secondItem="i5X-jr-4Np" secondAttribute="bottom" constant="20" id="XSB-k1-KNk"/>
                                     <constraint firstItem="iws-GE-zJ5" firstAttribute="leading" secondItem="sNk-ZN-8pf" secondAttribute="leading" constant="20" id="Xsu-Wp-ans"/>
                                     <constraint firstItem="i5X-jr-4Np" firstAttribute="top" secondItem="plc-Xl-vJ0" secondAttribute="top" id="Yad-Uz-khX"/>
-                                    <constraint firstItem="kCl-eS-cvD" firstAttribute="top" secondItem="iws-GE-zJ5" secondAttribute="bottom" constant="25" id="cNm-d5-32P"/>
+                                    <constraint firstItem="HMx-XO-WpO" firstAttribute="leading" secondItem="sNk-ZN-8pf" secondAttribute="leading" constant="20" id="dtP-LA-oeF"/>
                                     <constraint firstItem="sNk-ZN-8pf" firstAttribute="trailing" secondItem="t6z-7G-fPD" secondAttribute="trailing" constant="20" id="eSR-Nh-Ab4"/>
                                     <constraint firstItem="t6z-7G-fPD" firstAttribute="top" secondItem="bFI-Wu-6WU" secondAttribute="bottom" constant="8" symbolic="YES" id="fJK-vc-iwi"/>
-                                    <constraint firstItem="t6z-7G-fPD" firstAttribute="bottom" secondItem="plc-Xl-vJ0" secondAttribute="bottom" constant="40" id="fz5-7n-M0C"/>
+                                    <constraint firstItem="plc-Xl-vJ0" firstAttribute="bottom" secondItem="t6z-7G-fPD" secondAttribute="bottom" constant="40" id="fz5-7n-M0C"/>
                                     <constraint firstItem="sNk-ZN-8pf" firstAttribute="trailing" secondItem="bFI-Wu-6WU" secondAttribute="trailing" constant="20" id="hKb-FC-a7X"/>
                                     <constraint firstItem="sNk-ZN-8pf" firstAttribute="trailing" secondItem="kCl-eS-cvD" secondAttribute="trailing" constant="20" id="rEJ-jm-8M5"/>
-                                    <constraint firstItem="kCl-eS-cvD" firstAttribute="leading" secondItem="sNk-ZN-8pf" secondAttribute="leading" constant="20" id="rOI-nh-FMp"/>
+                                    <constraint firstItem="kCl-eS-cvD" firstAttribute="leading" secondItem="sNk-ZN-8pf" secondAttribute="leading" constant="40" id="rOI-nh-FMp"/>
                                     <constraint firstItem="i5X-jr-4Np" firstAttribute="width" secondItem="sNk-ZN-8pf" secondAttribute="width" id="sA0-3v-EQO"/>
+                                    <constraint firstItem="sNk-ZN-8pf" firstAttribute="trailing" secondItem="HMx-XO-WpO" secondAttribute="trailing" constant="20" id="x7p-Q2-2ca"/>
                                     <constraint firstItem="sNk-ZN-8pf" firstAttribute="trailing" secondItem="iws-GE-zJ5" secondAttribute="trailing" constant="20" id="xQP-9F-JRs"/>
+                                    <constraint firstItem="HMx-XO-WpO" firstAttribute="top" secondItem="iws-GE-zJ5" secondAttribute="bottom" constant="25" id="ycQ-fr-K4e"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="plc-Xl-vJ0"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="sNk-ZN-8pf"/>
                                 <variation key="default">
                                     <mask key="constraints">
+                                        <exclude reference="W9n-EK-wL6"/>
                                         <exclude reference="Bxx-Dq-HVp"/>
                                         <exclude reference="NVb-MX-Kau"/>
                                         <exclude reference="UHj-qC-e0L"/>
-                                        <exclude reference="W9n-EK-wL6"/>
                                     </mask>
                                 </variation>
                             </scrollView>
@@ -117,6 +126,16 @@
                     <navigationItem key="navigationItem" id="qqQ-xl-7Xd">
                         <barButtonItem key="rightBarButtonItem" image="heart" catalog="system" id="71W-vy-doC"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="favoriteBtn" destination="71W-vy-doC" id="LAx-HF-BGd"/>
+                        <outlet property="imgView" destination="i5X-jr-4Np" id="XPE-cD-BzV"/>
+                        <outlet property="lblDescription" destination="iws-GE-zJ5" id="dqv-5H-nAy"/>
+                        <outlet property="lblMovieName" destination="yLl-CR-Vdh" id="uox-26-f5F"/>
+                        <outlet property="lblPopularity" destination="t6z-7G-fPD" id="gHZ-Ij-Y48"/>
+                        <outlet property="lblProductionCompany" destination="kCl-eS-cvD" id="3rj-BC-PIb"/>
+                        <outlet property="lblRating" destination="bFI-Wu-6WU" id="xAQ-gn-2zA"/>
+                        <outlet property="lblTagLine" destination="7JP-sZ-pAB" id="5XI-Xi-E64"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
